--- a/components/layout/layout.module.css
+++ b/components/layout/layout.module.css
@@ -1,6 +1,7 @@
 .container {
   max-width: 90%;
-  position: relative; 
+  position: relative;
+  padding-left: 5%;
 }
 
 .header {
@@ -9,22 +10,28 @@
   align-items: center;
 }
 
+.main {
+  padding-bottom: 6rem;
+}
+
 .backToHome {
   margin: 3rem 0 0;
 }
 
 .footer {
-  width: 100%;
+  width: 90%;
   height: 6rem;
   bottom: 0px;
   position: absolute;
+  position: relative;
+  bottom: 0;
   background-color: rgb(73, 71, 71);
   color: darkgrey;
-  border-top: 1px solid #eaeaea;  
+  border-top: 1px solid #eaeaea;
   position: fixed;
 }
 
-.footerRow{
+.footerRow {
   display: flex;
   flex: 1;
   padding-top: 1rem;
