--- a/components/userpanel/userpanel.module.css
+++ b/components/userpanel/userpanel.module.css
@@ -1,6 +1,9 @@
 .main{
     display: inline-block;
-    padding: 10px;    
+    padding: 10px;
+    border-radius: 10px;
+    background-color: dimgray; 
+    color: darkgrey;   
 }
 
 .caption{
